[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixault"
version = "1.0.0"
description = "Official Python SDK for the Pixault image CDN"
authors = [{ name = "Endpoint Systems" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["pixault", "image", "cdn", "upload", "resize", "transform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://pixault.dev"
Repository = "https://github.com/Pixault/pixault-python"
